# TheWorkShopProgrammer

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml
Tutorial1/taxi_driver_agent/: agent.model  agent_best.model  pyproject.toml
Tutorial1/taxi_driver_agent/taxi_driver_agent/: __main__.py
Tutorial1/taxi_driver_agent/taxi_driver_agent/pyflow/: core.py  genetic.py
Tutorial1/taxi_driver_env/: pyproject.toml
Tutorial1/taxi_driver_env/taxi_driver_env/game/scenes/: gameplay.py  trainer.py
Tutorial1/taxi_driver_env/taxi_driver_env/render/widgets/: button.py
Tutorial2/: justfile
Tutorial2/notebooks/: basics_genai.ipynb  basics_nlp.ipynb  genai.ipynb  perceptron.ipynb
Tutorial3/: justfile  pyproject.toml
Tutorial3/notebooks/: wave_collapse.ipynb
notebooks/: basics.ipynb  mssql.ipynb  perceptron.ipynb  renamer.ipynb
notebooks/minab/: __init__.py  colorize.py  mssql_source.py  read_result.py  snowflake_source.py  util.py
notebooks/minab/sources/: mssql_source.py
notebooks/miniab/: __init__.py  base.py  colorize.py  duckdb_cache.py  util.py
notebooks/miniab/caches/: __init__.py  duckdb_cache.py
notebooks/miniab/sources/: base_source.py  mssql_source.py  snowflake_source.py
