[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romuald.rousseau@servier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
matplotlib = "^3.9.2"
duckdb = "^1.1.1"
pyodbc = "^5.1.0"
snowflake-connector-python = "^3.12.2"
airbyte = "^0.18.1"
pip-system-certs = "^4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pixi = "^1.0.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
