[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romuald.rousseau@servier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
matplotlib = "^3.9.2"
duckdb = "^1.1.1"
pyodbc = "^5.1.0"
snowflake-connector-python = "^3.12.2"
airbyte = "^0.18.1"
pip-system-certs = "^4.0"
duckdb-engine = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pixi = "^1.0.1"
python-dotenv = "^1.0.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"   # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107"   # Missing docstring in `__init__`
]

[tool.ruff.lint.pydocstyle]
convention = "google"
