[tool.poetry]
name = "Tutorial3"
version = "0.1.0"
description = ""
authors = ["Romuald Rousseau <romuald.rousseau@servier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "2.0.0"
tqdm = "^4.67.0"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
