[tool.poetry]
name = "taxi_driver_agent"
version = "0.1.0"
description = "Taxi Driver Agent"
authors = ["Romuald Rousseau <romualdrousseau@gmail.com>"]
readme = "README.md"
packages = [{ include = "taxi_driver_agent" }]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
numpy = "2.0.0"
fire = "^0.6.0"
taxi_driver_env = { path = "../taxi_driver_env/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
